# spellcraft

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  spellcraft.pyi
.github/workflows/: CI.yml  build-and-release.yml  docs.yml
docs/: change-log.rst  conf.py  index.rst
src/: kebab.rs  lib.rs  lower_camel.rs  shouty_kebab.rs  shouty_snake.rs  snake.rs  title.rs  train.rs  upper_camel.rs
tests/: test_main.py
