[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "spellcraft"
version = "0.1.0"
requires-python = ">=3.9"
description = "spellcraft is a helper library containing useful functions and spells, primarily designed for use by Dataclass Wizard."
authors = [{ name = "rnag", email = "me@ritviknag.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[project.urls]
homepage = "https://github.com/rnag/spellcraft"
documentation = "https://rnag.github.io/spellcraft/"
repository = "https://github.com/rnag/spellcraft"
changelog = "https://github.com/rnag/spellcraft/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# Development dependencies
dev = [
    "maturin>=1.7,<2.0",
    "black~=24.10.0",
    "mypy~=1.13.0",
    "pytest~=8.3.3",
    "pytest-benchmark~=5.1.0",
    "flake8~=7.1.1",
    "bump2version~=1.0.1",
    # Sphinx-related dependencies
    "Sphinx~=8.1.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-rtd-theme~=3.0.1",
]

sphinx = [
    "Sphinx~=8.1.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-rtd-theme~=3.0.1",
]
